[package]
name = "uwp"
version = "0.1.0"
authors = ["TAKAMI Torao <koiroha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
uuid = "0.8"
rmp = "0.8"
byteorder = "1"

[dev-dependencies]
rand = "0.7"
