[package]
name = "uwp"
version = "0.1.0"
authors = ["TAKAMI Torao <koiroha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "*"
thiserror = "1.0"
uuid = "0.8"
rmp = "0.8"
byteorder = "1"
url = "2.2"
mio = { version = "0.7", features = ["os-poll", "net"] }
async-trait = "0.1"
tungstenite = "0.11"

[dev-dependencies]
rand = "0.7"
